.provarCaches/00D410000011HE0EAM/objects/rstkf__ufxacctcurrsum__c.object
<CustomObject>
    <description>ufxacctcurrsum__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_cashbalrate__c</fullName>
        <inlineHelpText>Blank if the associated GL Account is not of Fx Type Monetary Cash. Otherwise, this is the calculated historical exchange rate for the account. It is calculated as GL Account balance divided by Foreign Currency Balance (from bank transactions).</inlineHelpText>
        <label>Cash Account Balance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_cashglbal__c</fullName>
        <inlineHelpText>Blank if the associated GL Account is not of Fx Type Monetary Cash. Otherwise, this is the GL balance of that account as of As of Date Exchange Rate.</inlineHelpText>
        <label>Cash Account GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_cashlaststmt__c</fullName>
        <inlineHelpText>Blank if the associated GL Account is not of Fx Type Monetary Cash. Otherwise, this is the Cash Account Net Change Since Last Statement:</inlineHelpText>
        <label>Cash Account Last Statement Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_cashnetchange__c</fullName>
        <label>Cash Account Net Change Since Last State</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_currentrate__c</fullName>
        <inlineHelpText>The exchange rate associated with Exchange Rate Schedule Used for Remeasurement.</inlineHelpText>
        <label>Exchange Rate at Effective Date</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_gains__c</fullName>
        <inlineHelpText>The total value of all gains on unrealized foreign exchange calculated for this GL Account and foreign currency.</inlineHelpText>
        <label>Total Gains</label>
        <summarizedField>rstkf__ufxdetail__c.rstkf__ufxdetail_gainamt__c</summarizedField>
        <summaryForeignKey>rstkf__ufxdetail__c.rstkf__ufxdetail_ufxacctcurrsum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_glhistrate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Blank if the associated GL Account is not of Fx Type Monetary Non-Cash or if no historical rate has not been defined in the GLHISTRATE object. Otherwise, this is the user-maintained historical rate for the account from the GLHISTRATE object.</inlineHelpText>
        <label>Non-Cash Account Historical Rate</label>
        <referenceTo>rstkf__glhistrate__c</referenceTo>
        <relationshipLabel>UFX Account / Currency Summary</relationshipLabel>
        <relationshipName>ufxacctcurrsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_losses__c</fullName>
        <inlineHelpText>The total value of all losses on unrealized foreign exchange calculated for this GL Account and foreign currency.</inlineHelpText>
        <label>Total Losses</label>
        <summarizedField>rstkf__ufxdetail__c.rstkf__ufxdetail_lossamt__c</summarizedField>
        <summaryForeignKey>rstkf__ufxdetail__c.rstkf__ufxdetail_ufxacctcurrsum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_name__c</fullName>
        <formula>rstkf__ufxacctcurrsum_ufxacctsum__r.rstkf__ufxacctsum_name__c &amp; &quot; &quot; &amp; rstkf__ufxacctcurrsum_sycurr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UFX Account / Currency Summary Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_noncashglbal__c</fullName>
        <inlineHelpText>Blank if the associated GL Account is not of Fx Type Monetary Non-Cash. Otherwise, this is the GL balance of that account as of As of Date Exchange Rate.</inlineHelpText>
        <label>Non-Cash Account GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_rate__c</fullName>
        <inlineHelpText>The rate set according to Rate Method, or zero if Rate Method = No Historical Rate Set.</inlineHelpText>
        <label>Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_ratemethod__c</fullName>
        <inlineHelpText>Automatically set to one of these three values:
Cash 
Historical
No Historical Rate Set</inlineHelpText>
        <label>Rate Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>No Historical Rate Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_sycurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A link to the Currency Master record that this record pertains to.</inlineHelpText>
        <label>Foreign Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>UFX Account / Currency Summary</relationshipLabel>
        <relationshipName>ufxacctcurrsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_syforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exchange Rate Schedule Used for Remeasurement</description>
        <inlineHelpText>If non-blank, this is a link to the Foreign Exchange Rate Schedule record that is the source of Exchange Rate at Effective Date and Rate. If blank, the associated GL Account is of Fx Type Monetary Cash or no rate schedule as of the effective date exists.</inlineHelpText>
        <label>Exchange Rate Schedule Used</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>UFX Account / Currency Summary</relationshipLabel>
        <relationshipName>ufxacctcurrsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ufxacctcurrsum_ufxacctsum__c</fullName>
        <inlineHelpText>A link to the UFXACCTSUM record that this record pertains to.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__ufxacctsum__c</referenceTo>
        <relationshipLabel>UFX Account / Currency Summary</relationshipLabel>
        <relationshipName>ufxacctcurrsums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UFX Account / Currency Summary</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UFX Account / Currency Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UFX Account / Currency Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>